[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/StartMenu/StartMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/StartMenu/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/title_screen.png" type="Texture" id=4]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -14.0
margin_right = 6.0
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Sprite" parent="CenterContainer"]
position = Vector2( 614, 373 )
scale = Vector2( 1.28516, 1.41406 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -164.0
margin_right = 184.0
margin_bottom = -39.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.917647, 0.690196, 0.690196, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 61.0
margin_bottom = 31.0
size_flags_horizontal = 0
size_flags_vertical = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.992157, 0.541176, 0.541176, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 43.0
margin_right = 97.0
margin_bottom = 74.0
size_flags_horizontal = 0
size_flags_vertical = 2
disabled = true
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
modulate = Color( 1, 0.733333, 0.733333, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 86.0
margin_right = 59.0
margin_bottom = 117.0
size_flags_horizontal = 0
size_flags_vertical = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
modulate = Color( 0.278431, 0.0431373, 0.0431373, 1 )
margin_left = 992.0
margin_top = 468.0
margin_right = 1254.0
margin_bottom = 736.0
text = "Coding and Level Design:
zafuzi
Daniel S

Art:
Daniel S

Music:
CapuchinBounty"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
